--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,15 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 
 ]
+dependencies = ["numpy>=2.2.5"]
 
 [project.urls]
 Homepage = "https://MeridianInnovation.github.io/colormap-tool/"
 Repository = "https://github.com/MeridianInnovation/colormap-tool"
 Documentation = "https://MeridianInnovation.github.io/colormap-tool/"
+
+[project.optional-dependencies]
+optional = ["matplotlib>=3.10.1", "opencv-python>=4.11.0.86"]
 
 [dependency-groups]
 dev = [
@@ -35,6 +39,8 @@ dev = [
     "mkdocs>=1.4.2",
     "mkdocs-material>=8.5.10",
     "mkdocstrings[python]>=0.26.1",
+    "matplotlib>=3.10.1",
+    "opencv-python>=4.11.0.86",
     "mkdocs-include-markdown-plugin>=7.1.5",
 ]
 [build-system]
