--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -6,7 +6,7 @@ on:
       - "main"
 
 env:
-  BACK_TO_DEVELOPMENT: true
+  MERGE_BACK_TO_DEVELOP: true
   DEVELOP_BRANCH: "develop"
   MAIN_BRANCH: "main"
 
@@ -18,7 +18,6 @@ jobs:
       contents: write
     outputs:
       new_sha: ${{ steps.get-sha.outputs.sha }}
-      back_to_develop: ${{ steps.check_back_to_development.outputs.back_to_develop }}
     # Skip this job if the commit message starts with 'bump:' as it's already a bump commit
     if: ${{ !startsWith(github.event.head_commit.message, 'bump:') && !contains(github.event.head_commit.message, 'Initial commit') }}
 
@@ -33,13 +32,13 @@ jobs:
       - name: Configure Git bot
         uses: ./.github/actions/config-git-bot
 
-      - name: Setup Python environment
-        uses: ./.github/actions/setup-python-env
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Check if nothing to bump
         id: check_bump
         run: |
-          next_version=$(uv run cz bump --get-next --yes)
+          next_version=$(uvx --from commitizen cz bump --get-next --yes)
           echo "next_version=$next_version" >> $GITHUB_OUTPUT
           if [ -z "$next_version" ]; then
             exit 1
@@ -57,10 +56,10 @@ jobs:
           fi
 
       - name: Bump version and generate changelog
-        if: ${{ steps.check_bump.outcome == 'success' }}
+        if: ${{ steps.check_duplicate.outcome == 'success' }}
         id: bump
         run: |
-          uv run cz bump --yes --changelog --changelog-to-stdout --git-output-to-stderr > body.md
+          uvx --from commitizen cz bump --yes --changelog --changelog-to-stdout --git-output-to-stderr > body.md
 
       - name: push bump commit
         if: ${{ steps.bump.outcome == 'success' }}
@@ -70,40 +69,8 @@ jobs:
           branch: ${{ github.ref }}
           tags: true
 
-      - name: Get the new commit SHA
-        if: ${{ steps.bump.outcome == 'success' }}
-        id: get-sha
-        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-
-      - name: Check if back to development
-        if: ${{ env.BACK_TO_DEVELOPMENT == 'true' }}
-        id: check_back_to_development
-        run: |
-          echo "back_to_develop=true" >> $GITHUB_OUTPUT
-
-  back-to-development:
-    runs-on: ubuntu-latest
-    needs: bump-version-and-changelog
-    if: ${{ needs.bump-version-and-changelog.outputs.back_to_develop == 'true' }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Backpoint to development
+        if: ${{ env.MERGE_BACK_TO_DEVELOP == 'true' }}
+        uses: ./.github/workflows/backpoint.yml
         with:
-          fetch-depth: 0
-          ref: ${{ env.DEVELOP_BRANCH }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Configure Git bot
-        uses: ./.github/actions/config-git-bot
-
-      - name: Back to development
-        run: |
-          git fetch --all
-          git pull --all
-          git merge --no-ff --no-edit origin/${{ env.MAIN_BRANCH }}
-
-      - name: Push to development
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.BOT_ACCESS_TOKEN }}
-          branch: ${{ env.DEVELOP_BRANCH }}
+          target-ref: ${{ env.DEVELOP_BRANCH }}
