--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,21 @@ description = "A Colormap Tool package to convert cmps between cv and mpl."
 authors = [{ name = "Meridian Innovation", email = "info@meridianinno.com" }]
 readme = "README.md"
 keywords = ['python']
-requires-python = ">=3.10,<4.0"
+requires-python = ">=3.9,<4.0"
 classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
 
 ]
-dependencies = ["numpy>=2.2.5"]
+dependencies = [
+    "numpy>=2.0.2",
+]
 
 [project.urls]
 Homepage = "https://MeridianInnovation.github.io/colormap-tool/"
@@ -25,7 +27,7 @@ Repository = "https://github.com/MeridianInnovation/colormap-tool"
 Documentation = "https://MeridianInnovation.github.io/colormap-tool/"
 
 [project.optional-dependencies]
-optional = ["matplotlib>=3.10.1", "opencv-python>=4.11.0.86"]
+optional = ["matplotlib>=3.9.4", "opencv-python>=4.11.0.86"]
 
 [dependency-groups]
 dev = [
@@ -39,7 +41,7 @@ dev = [
     "mkdocs>=1.4.2",
     "mkdocs-material>=8.5.10",
     "mkdocstrings[python]>=0.26.1",
-    "matplotlib>=3.10.1",
+    "matplotlib>=3.9.4",
     "opencv-python>=4.11.0.86",
     "mkdocs-include-markdown-plugin>=7.1.5",
 ]
