--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,48 +75,20 @@ src = ["src", "tests", "example"]
 
 
 [tool.ruff.lint]
-select = [
-    # flake8-2020
-    "YTT",
-    # flake8-bandit
-    "S",
-    # flake8-bugbear
-    "B",
-    # flake8-builtins
-    "A",
-    # flake8-comprehensions
-    "C4",
-    # flake8-debugger
-    "T10",
-    # flake8-simplify
-    "SIM",
-    # isort
-    "I",
-    # mccabe
-    "C90",
-    # pycodestyle
-    "E",
-    "W",
-    # pyflakes
-    "F",
-    # pygrep-hooks
-    "PGH",
-    # pyupgrade
-    "UP",
-    # ruff
-    "RUF",
-    # tryceratops
-    "TRY",
-]
+select = ["ALL"]
 ignore = [
-    # DoNotAssignLambda
-    "E731",
-    # raise-vanilla-args
-    "TRY003",
+  "TD", "N", "C", "T",
+  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D401",
+  "A", "ANN",
+  "FIX",
+  "PLR", "FBT",
+  "RET", "EM", "ERA", "BLE", "SLF", "TRY",
 ]
+fixable = ["ALL"]
+unfixable = ["F401"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["S101"]
+"tests/*.py" = ["S101"]
 
 [tool.ruff.format]
 preview = true
